created link to file

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,12 @@
 	<title>Document</title>
 </head>
 <body>
+	<% if (locals.fileLink != null) { %>
+		<div style="margin-bottom: 1rem;">
+			Your file is uploaded:
+			<a href="<%= locals.fileLink %> "><%= locals.fileLink %></a>
+		</div>
+	<% } %>
 	<form action="/upload" method="POST" style="display: grid; gap: .5rem; grid-template-columns: auto 1fr; max-width: 500px; margin: 0 auto;" enctype="multipart/form-data">
 		<label for="file">File:</label>
 		<input type="file" id="file" name="file" required/>
